fix: delete second shift

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    font-size: 100%;
+    font-size: 10px;
     font-family:'Ubuntu Mono', monospace, sans-serif;
 }
 
@@ -13,7 +13,7 @@ body {
 }
 
 main {
-    width: 1020px;
+    width: 102rem;
     margin: auto;
 }
 .header {
@@ -22,42 +22,42 @@ main {
 }
 h1 {
     text-align: center;
-    text-shadow: 4px 4px 3px #160a3d;
+    text-shadow: 0.4rem 0.4rem 0.3rem #160a3d;
     color: slateblue;
-    font-size: 65px;
-    margin: 20px;
+    font-size: 6.5rem;
+    margin: 2rem;
 }
 img {
-    margin: 20px;
-    max-width: 130px;
+    margin: 2rem;
+    max-width: 13rem;
 
 }
 .keyboard {
     display: grid;
-    grid-row-gap: 10px;
-    padding: 10px;
+    grid-row-gap: 1rem;
+    padding: 1rem;
     position: relative;
     overflow: hidden;
     background: #3e3459;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     border: 3px solid #222;
 }
 
 .keyboard__row {
     display: grid;
-    grid-gap: 10px;
-    grid-row-gap: 10px;
-    height: 50px;
+    grid-gap: 1rem;
+    grid-row-gap: 1rem;
+    height: 5rem;
 }
 
 .keyboard__key {
     display: flex;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 0.3rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -96,48 +96,52 @@ img {
 }
 
 [data-fn="true"] > .letter {
-    font-size: 16px;
+    font-size: 2rem;
 }
 
 [data-code="CapsLock"] {
-    width: 100px;
+    width: 12rem;
 }
 
 [data-code="ShiftLeft"] {
-    width: 120px;
+    width: 12rem;
 }
 
 [data-code="ShiftRight"] {
-    width: 120px;
+    width: 12rem;
 }
 
 [data-code="Enter"] {
-    width: 100px;
+    width: 10rem;
 }
 
 [data-code="Tab"] {
-    width: 80px;
+    width: 8rem;
 }
 
 [data-code="ControlLeft"] {
-    width: 100px;
+    width: 10rem;
 }
 
 [data-code="ControlRight"] {
-    width: 100px;
+    width: 10rem;
 }
 
 [data-code="Backspace"] {
-    width: 115px;
+    width: 13rem;
+}
+
+[data-code="End"] {
+    width: 12rem;
 }
 
 [data-code="Space"] {
-    width: 550px;
+    width: 55rem;
 }
 
 [data-code="AltLeft"],
 [data-code="AltRight"] {
-    width: 60px;
+    width: 6rem;
 }
 
 [data-code="ArrowLeft"],
@@ -148,12 +152,12 @@ img {
 
 .active {
     background: #6b4ad4;
-    box-shadow: 2px 3px 0 1px #160a3d;
+    box-shadow: 0.2rem 0.3rem 0 0.1rem #160a3d;
 
 }
 
 .letter {
-    font-size: 25px;
+    font-size: 2.8rem;
     width: 100%;
     text-align: center;
     transition: all .2s ease;
@@ -172,20 +176,21 @@ img {
 textarea.output {
     resize: none;
     width: 100%;
-    height: 150px;
-    padding: 10px;
+    height: 15rem;
+    padding: 1rem;
     box-sizing: border-box;
-    font-size: 18px;
+    font-size: 2.5rem;
     letter-spacing: 1px;
-    margin-top: 50px;
-    margin-bottom: 10px;
+    margin-top: 5rem;
+    margin-bottom: 1rem;
 }
 
 .sub {
+    font-size: 2rem;
     width: 100%;
     color: #68688a;
     text-align: left;
-    padding-left: 10px;
+    padding-left: 1rem;
     transition: all .2s ease;
     -webkit-transition: all .2s ease;
     -moz-transition: all .2s ease;
@@ -195,21 +200,21 @@ textarea.output {
 
 .sub.sub-active:not(:empty) {
     color: rgb(19, 80, 0);
-    font-size: 23px;
+    font-size: 2.5rem;
 }
 
 .sub.sub-active:not(:empty) ~ .letter.sub-inactive {
     color: #68688a;
-    font-size: 16px;
+    font-size: 2rem;
     text-align: center;
-    padding-right: 10px;
+    padding-right: 1rem;
     width: 50%;
     transform-origin: center;
-    transform: translateX(20px);
-    -webkit-transform: translateX(20px);
-    -moz-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    -o-transform: translateX(20px);
+    transform: translateX(2rem);
+    -webkit-transform: translateX(2rem);
+    -moz-transform: translateX(2rem);
+    -ms-transform: translateX(2rem);
+    -o-transform: translateX(2rem);
 }
 
 @keyframes fadeInOut {
@@ -243,3 +248,18 @@ textarea.output {
     display: none;
 }
 
+@media screen and (max-width: 1100px) {
+    html {
+        font-size: 8px;
+    }
+}
+@media screen and (max-width: 900px) {
+    html {
+        font-size: 6px;
+    }
+}
+@media screen and (max-width: 650px) {
+    html {
+        font-size: 5px;
+    }
+}
